Added oauth fields for the user table
