# api/openapi.yml
@@ -192,6 +192,10 @@ components:
           type: integer
         contact:
           type: boolean
+        oauth_provider:
+          type: string
+        oauth_id:
+          type: string
         active: 
           type: boolean
     Tag:
